<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Package4textView1"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="Pakiet 4"
        android:textAlignment="center"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Package4textView2"
        android:layout_width="364dp"
        android:layout_height="60dp"
        android:layout_below="@+id/Package4textView1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/opis_pakietu"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Package4textView1" />

    <TextView
        android:id="@+id/Package4textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Package4textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:text="@string/aktywno_1_x_razy_dziennie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Package4textView2" />

    <TextView
        android:id="@+id/Package4textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Package4textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:text="@string/aktywno_2_x_razy_dziennie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Package4textView3" />

    <TextView
        android:id="@+id/Package4textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Package4textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:text="@string/aktywno_3_x_razy_dziennie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Package4textView4" />

    <TextView
        android:id="@+id/Package4textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Package4textView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:text="@string/aktywno_4_x_razy_dziennie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Package4textView5" />

    <TextView
        android:id="@+id/Package4textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Package4textView6"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Package4textView6" />


    <TextView
        android:id="@+id/Package4textView8"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_above="@+id/Package4button1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="79dp"
        android:gravity="center"
        android:text="O której wysłać powiadomienie?"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Package4editText1"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_above="@+id/Package4button1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="98dp"
        android:layout_marginBottom="25dp"
        android:hint="Godzina"
        android:inputType="number"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/Package4editText2"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_above="@+id/Package4button1"
        android:layout_marginStart="58dp"
        android:layout_marginBottom="25dp"
        android:layout_toEndOf="@+id/Package4editText1"
        android:hint="Minuta"
        android:inputType="number"
        android:textSize="14sp" />

    <Button
        android:id="@+id/Package4button1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_above="@+id/Package4button2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#F19423"
        android:text="Aktywuj pakiet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Package4button2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:text="Dezaktywuj pakiet" />



</RelativeLayout>